plugins {
    id 'java'
    id 'application'
}

group = 'dev.despical'
version = '1.1.0'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

repositories {
    mavenCentral()
    maven { url = 'https://maven.lavalink.dev/releases' }
}

dependencies {
    implementation 'net.dv8tion:JDA:6.4.2'
    implementation 'club.minnced:jdave-api:0.1.8'
    implementation 'club.minnced:jdave-native-win-x86-64:0.1.8'
    implementation 'club.minnced:jdave-native-linux-x86-64:0.1.8'
    implementation 'dev.arbjerg:lavaplayer:2.2.6'
    implementation 'dev.lavalink.youtube:v2:1.18.1'
    implementation 'io.github.cdimascio:dotenv-java:3.2.0'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.22.0'
    implementation 'ch.qos.logback:logback-classic:1.5.37'

    compileOnly 'org.projectlombok:lombok:1.18.46'

    annotationProcessor 'org.projectlombok:lombok:1.18.46'
}

application {
    mainClass = 'dev.despical.musicbot.MusicBotApplication'
    applicationDefaultJvmArgs = ['--enable-native-access=ALL-UNNAMED']
}

tasks.withType(JavaExec).configureEach {
    jvmArgs '--enable-native-access=ALL-UNNAMED'
}

jar {
    manifest {
        attributes(
            'Main-Class': application.mainClass.get(),
            'Enable-Native-Access': 'ALL-UNNAMED'
        )
    }
}
